align hover fix

--- a/webicons.css
+++ b/webicons.css
@@ -15,7 +15,7 @@
   margin-bottom: 5px; }
 
 .webicon:hover {
-  margin: -1px 0 1px;
+  margin: -1px auto 1px;
   -moz-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.25);
   -webkit-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.25);
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.25); }
